Uh.. oh hey, this thing has git! Let's do a commit and push!

--- a/css/style.css
+++ b/css/style.css
@@ -62,3 +62,10 @@
 	font-size: .7em;
 	color: gray;
 }
+
+.tableComment {
+	color: blue; /* Yes. It is Blue. */
+}
+.tableComment span {
+	background: #A6D0FF;
+}
